<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="70dp"
        android:background="@color/orange"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="IMDMARKET"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textopção"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/opção"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btcadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginTop="220dp"
        android:text="@string/cadastro"
        app:layout_constraintEnd_toStartOf="@+id/btlistar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/btlistar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btcadastro"
        app:layout_constraintTop_toTopOf="@+id/btcadastro"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/btalterar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/alterar"
        app:layout_constraintEnd_toStartOf="@+id/btdeletar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btcadastro"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/btdeletar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/deletar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btalterar"
        app:layout_constraintTop_toBottomOf="@+id/btlistar"
        app:layout_constraintWidth_percent="0.45" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="239dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="124dp"
        android:src="@drawable/compras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />







</androidx.constraintlayout.widget.ConstraintLayout>