<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraindeletar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activies.DeletarActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="70dp"
        android:background="@color/orange"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="IMDMARKET"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textdeletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Topo_deletar"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_product_code_label"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="Código do produto:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdeletar" />

    <EditText
        android:id="@+id/ed_codigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="190dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="16dp"/>


    <Button
        android:id="@+id/btdeletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:minHeight="60dp"
        android:text="@string/botão_deletar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_codigo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btlimpar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:minHeight="60dp"
        android:text="@string/botão_limpar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_codigo"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>