<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainlogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activies.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="70dp"
        android:background="@color/orange"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="IMDMARKET"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_login"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="Login"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_senha"
        android:textSize="25sp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@id/edLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:hint="Senha"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:text="@string/app_entrar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <TextView
        android:id="@+id/textEsquecerSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Esqueci minha senha/login"
        android:textColor="@color/blue_link"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btEntrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />





</androidx.constraintlayout.widget.ConstraintLayout>